syntax = "proto3";

option csharp_namespace = "GodvilleClient";
package greet;

service GodvilleService {
  rpc Login(LoginData) returns (ServerAddress);
  rpc Register(RegisterData) returns (ServerAddress);
}

message LoginData {
  string login = 1;
  string password = 2;
}

message RegisterData {
  LoginData loginData = 1;
  string nickname = 2;
}

message ServerAddress {
	string ip = 1;
}
